--- a/.github/workflows/fossa-sbom.yml
+++ b/.github/workflows/fossa-sbom.yml
@@ -5,6 +5,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  schedule:
+    - cron: '0 9 * * *'      # daily at 09:00 UTC (optional)
   workflow_dispatch:
 
 jobs:
@@ -12,25 +14,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout your code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Install FOSSA CLI (same as your curl command)
       - name: Install FOSSA CLI
         run: |
           curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install-latest.sh | bash
           fossa --version
 
-      # 3️⃣ Run FOSSA analyze (exactly what you did manually)
       - name: Analyze project with FOSSA
         env:
           FOSSA_API_KEY: ${{ secrets.FOSSA_API_KEY }}
         run: |
           fossa analyze
 
-      # 4️⃣ Generate SBOM file (CycloneDX JSON format)
-      - name: Generate SBOM
+      - name: Generate SBOMs
         env:
           FOSSA_API_KEY: ${{ secrets.FOSSA_API_KEY }}
         run: |
@@ -38,7 +36,6 @@ jobs:
           fossa report attribution --format cyclonedx-json > sbom/sbom-cyclonedx.json
           fossa report attribution --format spdx-json > sbom/sbom-spdx.json
 
-      # 5️⃣ Upload SBOM artifacts
       - name: Upload SBOM Artifacts
         uses: actions/upload-artifact@v4
         with:
